[package]
name = "ledger-crypto-helpers"
version = "0.2.0"
edition = "2018"

[dependencies]
arrayvec = { version = "0.7.1", default-features = false }
base64 = { version = "0.13.0", default-features = false }
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git" }
ledger-log = { git = "https://github.com/alamgu/ledger-log.git" }
zeroize = { version = "1.5.2", default-features = false }

[dev-dependencies]
testmacro = { git = "https://github.com/yhql/testmacro" }
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git", features = [ "speculos" ] }

[patch."https://github.com/LedgerHQ/ledger-nanos-sdk.git".nanos_sdk]
git = "https://github.com/alamgu/ledger-nanos-sdk.git"
branch = "relocating-loader-w-fixes"
